src/test/deca/context/invalid/homemade/multiple_declar.deca
// Description :
//test of variable initialization with a different type
//
// Resultats :
//Erreur contextuelle
//Ligne <9> : < Variable c is already declared in current context>
{
   boolean c = true;
   int c;
}